# aether-consumer-sdk

./: .gitignore  .travis.yml  Dockerfile  MAINIFEST.in  README.md  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  entrypoint_py2.sh  requirements.txt  sdk.dockerfile  sdk.py2.dockerfile  sdk.py3.dockerfile  serve.py  setup.cfg  setup.py
aet/: __init__.py  api.py  consumer.py  exceptions.py  helpers.py  job.py  jsonpath.py  kafka.py  kafka_utils.py  logger.py  node.py  resource.py  settings.py  task.py
aet/static/: app.ts
aet/templates/: app.html
conf/extras/: flake8.cfg
conf/pip/: primary-requirements.py2.txt  primary-requirements.txt  requirements.py2.txt  requirements.py3.txt  requirements.txt
conf/schema/: strict.json
scripts/: build.sh  test.sh  upload.sh
tests/: __init__.py  local_environment.env  test.sh  test_all.sh  test_environment.env  test_sdk.py  test_ui.py
tests/assets/: schemas.py
