# Copyright (C) 2018 by eHealth Africa : http://www.eHealthAfrica.org
#
# See the NOTICE file distributed with this work for additional information
# regarding copyright ownership.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[bdist_wheel]
universal = 0


[metadata]
license_file = LICENSE
description-file = README.md


[aliases]
test = pytest


[tool:pytest]
python_files = tests/test*.py
addopts = --maxfail=1
#  For super verbose tests...
# log_cli = 1
# log_cli_level = DEBUG
# log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
# log_cli_date_format=%Y-%m-%d %H:%M:%S


[flake8]
max-line-length = 100
ignore =
        F403,
        F405,
        W503,
        W504
exclude =
    */.eggs/*
    */__pycache__/*
    */test_sdk.py
